--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -2,7 +2,39 @@
 
 {% block content %}
 {% if user.is_authenticated%}
-  HA
+
+<table class="table table table-striped table-hover table-bordered border-secondary ">
+  
+  <thead class="table-dark" >
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2">Larry the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+
 {% else %}
     <div class="col-mid-6 offset-md-3">
         <form action="{% url 'website:home' %}" method="post">
